kubernetes/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quizloom-backend-deployment
  namespace: quizloom
  labels:
    app: quizloom-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: quizloom-backend
  template:
    metadata:
      labels:
        app: quizloom-backend
    spec:
      containers:
        - name: quizloom-backend
          image: yashbansod2003/quizloomb:build-20
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000
