kubernetes/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: quizloom-backend-service
  namespace: quizloom
spec:
  selector:
    app: quizloom-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
